# cbor-example

./: .gitmodules  Cargo.toml  LICENSE  Readme.md
client/: .gitignore  CMakeLists.txt  main.c
client/include/: telemetry_codec.h
client/src/: telemetry_codec.c
src/: main.rs
