[package]
name = "cbor-example"
version = "0.1.0"
authors = ["Jared Wolff <hello@jaredwolff.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
